# Pattern-Sleuth

./: .env.example  .gitignore  AGENT_INSTRUCTIONS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  product.config.json  pyproject.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_pattern.yml
.github/workflows/: ci.yml
docs/: DOMAIN_EXPANSION_ROADMAP.md  PATTERN_QUALITY_AND_INTENT.md  QUICK_START.md  REGISTRY_SCHEMA_INDEX.md
pattern_sleuth/: __init__.py  cli.py  discovery.py  engine.py  sluice.py  test_harness.py
pattern_sleuth/policy/: policy.json
pattern_sleuth/registry/: attack_vector_patterns.json  cwe_top25_patterns.json  delegated_patterns.json  forensic_intel.json  java_patterns.json  patterns.json  sovereign_patterns.json  typescript_patterns.json
scripts/: check_syntax.py  run_ci_checks.py
tests/: test_cli.py  test_discovery.py  test_edge_cases.py  test_engine.py  test_sluice.py  test_test_harness.py
tests/pattern_tests/: forensic_patterns_test.json
