[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pattern-sleuth"
version = "1.0.0"
description = "Anti-pattern detection engine for code, docs, and AI-generated content. 97 patterns for code quality, security, and AI behavior analysis."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Pattern Sleuth Team", email = "admin@rpgreliquary.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
keywords = ["linting", "security", "code-quality", "anti-patterns", "ai-safety"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
pattern-sleuth = "pattern_sleuth.cli:main"

[project.urls]
Homepage = "https://github.com/Dave-Meloncelli/pattern-sleuth"
Documentation = "https://github.com/Dave-Meloncelli/pattern-sleuth#readme"
Repository = "https://github.com/Dave-Meloncelli/pattern-sleuth"
Issues = "https://github.com/Dave-Meloncelli/pattern-sleuth/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pattern_sleuth*"]

[tool.setuptools.package-data]
pattern_sleuth = ["registry/*.json", "policy/*.json"]
